# Brain-Storm

./: .dockerignore  .env.example  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-production.yml  playwright.yml  pr-labeler.yml  pr-size-check.yml
apps/backend/: .dockerignore  .eslintrc.js  Dockerfile  jest.config.js  package.json
apps/backend/src/: app.module.ts  data-source.ts  main.ts
apps/backend/src/auth/: api-key.strategy.spec.ts  auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts  jwt.strategy.ts  password-reset-token.entity.ts  refresh-token.entity.ts  stellar-auth.service.ts
apps/backend/test/: pact.provider.spec.ts
apps/frontend/: .dockerignore  .eslintrc.js  Dockerfile  next.config.js  package.json  playwright.config.ts  vitest.config.ts
apps/frontend/e2e/: credentials.spec.ts  tsconfig.json  user-journey.spec.ts
apps/frontend/messages/: en.json  es.json
contracts/analytics/: README.md
contracts/analytics/src/: lib.rs
contracts/certificate/: Cargo.toml
contracts/certificate/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/token/src/: lib.rs
docs/: contracts.md  migrations.md  security.md  stellar-auth.md
(+169 files in other folders)
