[workspace]
members = [
    "contracts/analytics",
    "contracts/token",
    "contracts/shared",
    "contracts/certificate",
    "contracts/governance",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
